@@ -1,58 +1,14 @@
-# Before `make install' is performed this script should be runnable with
-# `make test'. After `make install' it should work as `perl test.pl'
+#!/usr/bin/perl -w
 
-######################### We start with some black magic to print on failure.
-
-# Change 1..1 below to 1..last_test_to_print .
-# (It may become useful if the test is moved to ./t subdirectory.)
 use strict;
 
-use vars qw($Total_tests);
+use Test::More tests => 5;
 
-my $loaded;
-my $test_num = 1;
-BEGIN { $| = 1; $^W = 1; }
-END {print "not ok $test_num\n" unless $loaded;}
-print "1..$Total_tests\n";
-use Class::Fields::Attribs;
-$loaded = 1;
-print "ok $test_num - Compile\n";
-$test_num++;
-######################### End of black magic.
-
-# Insert your test code below (better if it prints "ok 13"
-# (correspondingly "not ok 13") depending on the success of chunk 13
-# of the test code):
-sub ok {
-    my($test, $name) = @_;
-    print "not " unless $test;
-    print "ok $test_num";
-    print " - $name" if defined $name;
-    print "\n";
-    $test_num++;
-}
-
-sub eqarray  {
-    my($a1, $a2) = @_;
-    return 0 unless @$a1 == @$a2;
-    my $ok = 1;
-    for (0..$#{$a1}) { 
-        unless($a1->[$_] eq $a2->[$_]) {
-        $ok = 0;
-        last;
-        }
-    }
-    return $ok;
-}
-
-# Change this to your # of ok() calls + 1
-BEGIN { $Total_tests = 5 }
-
-use Class::Fields::Attribs;
+BEGIN { use_ok 'Class::Fields::Attribs' }
 
 # Check that the attributes exported okay.
-::ok( Class::Fields::Attribs::PRIVATE   == PRIVATE      ,'PRIVATE'  );
-::ok( Class::Fields::Attribs::PUBLIC    == PUBLIC       ,'PUBLIC'   );
-::ok( Class::Fields::Attribs::INHERITED == INHERITED    ,'INHERITED');
-::ok( Class::Fields::Attribs::PROTECTED == PROTECTED    ,'PROTECTED');
+is( Class::Fields::Attribs::PRIVATE  , PRIVATE      ,'PRIVATE'  );
+is( Class::Fields::Attribs::PUBLIC   , PUBLIC       ,'PUBLIC'   );
+is( Class::Fields::Attribs::INHERITED, INHERITED    ,'INHERITED');
+is( Class::Fields::Attribs::PROTECTED, PROTECTED    ,'PROTECTED');
 
