@@ -1,57 +1,16 @@
-# Before `make install' is performed this script should be runnable with
-# `make test'. After `make install' it should work as `perl test.pl'
+#!/usr/bin/perl -w
+
+use strict;
 
 my $Has_PH = $] < 5.009;
 
 $SIG{__WARN__} = sub { return if $_[0] =~ /^Pseudo-hashes are deprecated/ };
 
 
-######################### We start with some black magic to print on failure.
+use Test::More tests => 5;
 
-# Change 1..1 below to 1..last_test_to_print .
-# (It may become useful if the test is moved to ./t subdirectory.)
-use strict;
+BEGIN { use_ok 'Class::Fields::Inherit' }
 
-use vars qw($Total_tests);
-
-my $loaded;
-my $test_num = 1;
-BEGIN { $| = 1; $^W = 1; }
-END {print "not ok $test_num\n" unless $loaded;}
-print "1..$Total_tests\n";
-use Class::Fields::Inherit;
-$loaded = 1;
-print "ok $test_num - Compile\n";
-$test_num++;
-######################### End of black magic.
-
-# Insert your test code below (better if it prints "ok 13"
-# (correspondingly "not ok 13") depending on the success of chunk 13
-# of the test code):
-sub ok ($;$) {
-    my($test, $name) = @_;
-    print "not " unless $test;
-    print "ok $test_num";
-    print " - $name" if defined $name;
-    print "\n";
-    $test_num++;
-}
-
-sub eqarray  {
-    my($a1, $a2) = @_;
-    return 0 unless @$a1 == @$a2;
-    my $ok = 1;
-    for (0..$#{$a1}) { 
-        unless($a1->[$_] eq $a2->[$_]) {
-        $ok = 0;
-        last;
-        }
-    }
-    return $ok;
-}
-
-# Change this to your # of ok() calls + 1
-BEGIN { $Total_tests = 5; }
 
 package Yar;
 
@@ -64,11 +23,10 @@ BEGIN {
     inherit_fields('Pants', 'Yar');
 }
 
-::ok( ::eqarray([sort keys %Pants::FIELDS], 
-                [sort qw(Pub Pants _Prot Armoured)] 
-               ),
-      'inherit_fields()'
-    );
+::is_deeply([sort keys %Pants::FIELDS], 
+            [sort qw(Pub Pants _Prot Armoured)],
+            'inherit_fields()'
+);
 
 # Can't use compile time (my Pants) because then eval won't catch
 # the error (it won't be run time)
@@ -81,7 +39,7 @@ eval {
     $trousers->{_Prot}      = "Hey oh";
     $trousers->{Armoured}   = 4;
 };
-::ok($@ eq '' or $@ !~ /no such field/i);
+::ok($@ eq '' or $@ !~ /no such field/i) or diag $@;
 
 my $error = $Has_PH ? 'no such( [\w-]+)? field'
                     : q[Attempt to access disallowed key];
@@ -89,9 +47,9 @@ my $error = $Has_PH ? 'no such( [\w-]+)? field'
 eval {
     $trousers->{_Priv} = "Yarrow";
 };
-::ok($@ =~ /^$error/i);
+::like($@, "/^$error/i");
 
 eval {
     $trousers->{_Pantaloons} = "Yarrow";
 };
-::ok($@ =~ /^$error/i);
+::like($@, "/^$error/i");
